--- a/src/main/resources/com/amadeus/cyt/cyt-setup.fxml
+++ b/src/main/resources/com/amadeus/cyt/cyt-setup.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="528.0" prefWidth="672.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.amadeus.cyt.controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="528.0" prefWidth="672.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.santosh.prj.controller.MainController">
    <children>
       <VBox layoutY="-5.0" prefHeight="534.0" prefWidth="202.0" style="-fx-background-color: #E5E5E5;">
          <children>
