--- a/src/main/resources/com/amadeus/cyt/download.fxml
+++ b/src/main/resources/com/amadeus/cyt/download.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="456.0" prefWidth="456.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.amadeus.cyt.controller.Download">
+<Pane prefHeight="456.0" prefWidth="456.0" style="-fx-background-color: #FFF;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.santosh.prj.controller.Download">
    <children>
       <HBox prefHeight="18.0" prefWidth="462.0" style="-fx-background-color: #FFBF00;">
          <children>
